# rust-evol

./: .gnuplot  Cargo.toml
src/: actions.rs  genome.rs  input.rs  main.rs  net.rs  pool.rs  render.rs  replicant.rs  rng.rs  server.rs  simulation.rs  world.rs
