[package]
name = "evol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
druid = "0.7"
rayon = "1.5"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1"
serde_with = "1"